# jackal-ugv-isaac-sim

./: README.md  read_me.txt
acados_model/: acados_ocp_nlp.json  footprint_test.m  insert_at_end.py  my_model.m  notes.txt  ocp_example_v05.m
acados_model/c_generated_code/: Makefile  Wheelchair_mex_solver.m  acados_mex_create_Wheelchair.c  acados_mex_free_Wheelchair.c  acados_mex_set_Wheelchair.c  acados_mex_solve_Wheelchair.c  acados_sim_solver_sfunction_Wheelchair.c  acados_solver_sfunction_Wheelchair.c  main_Wheelchair  main_Wheelchair.c  main_mex_Wheelchair.c  main_sim_Wheelchair  main_sim_Wheelchair.c  make_main_mex_Wheelchair.m  make_mex_Wheelchair.m  make_sfun.m  make_sfun_sim.m
acados_model/c_generated_code/Wheelchair_model/: Wheelchair_expl_ode_hess.c  Wheelchair_expl_vde_forw.c
acados_model/solver/: acados_solver_holder.cpp
src/human_detection/: CMakeLists.txt  package.xml
src/human_detection/launch/: img_2_cloud.launch
src/human_detection/map/: generated_map.yaml
src/human_detection/map (copy)/: generated_map.yaml
src/human_detection/src/: bw_human (copy).py  bw_human.py  bw_human_w_camera_info (another copy).py  bw_human_w_camera_info (copy).py  bw_human_w_camera_info_onnyx.py  example_planarsegmentation (copy).cpp  example_planarsegmentation.cpp  gui (copy).py  gui.py  mymap.yaml  reader.py
src/human_detection/src/PP-HumanSeg/: notes.txt
src/human_detection/src/src/: infer.py  seg_demo.py
src/mpc_low/: CMakeLists.txt  emulation.py  emulation_isaac.py  package.xml  pose_publisher.py  pub.py  record_joints_odom.py  wheel_sub.py
(+11 files in other folders)
